--- a/about.html
+++ b/about.html
@@ -121,9 +121,9 @@
     <div class="container">
       <p>&copy; 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
       <div class="social-links">
-        <a href="https://discord.gg/YOUR_LINK" target="_blank">Discord</a>
-        <a href="https://twitter.com/YOUR_PROFILE" target="_blank">Twitter</a>
-        <a href="https://instagram.com/YOUR_PROFILE" target="_blank">Instagram</a>
+        <a href="https://discord.gg/wV4uRQPgbg" target="_blank">Discord</a>
+        <a href="#" target="_blank">Twitter</a>
+        <a href="#" target="_blank">Instagram</a>
       </div>
     </div>
   </footer>
