--- a/portfolio.html
+++ b/portfolio.html
@@ -74,9 +74,9 @@
     <div class="container">
       <p>&copy; 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
       <div class="social-links">
-        <a href="#">Discord</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
+        <a href="https://discord.gg/wV4uRQPgbg" target="_blank">Discord</a>
+        <a href="#" target="_blank">Twitter</a>
+        <a href="#" target="_blank">Instagram</a>
       </div>
     </div>
   </footer>
