--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
   <meta name="description" content="MuffinGFX - Dansk Grafik Hold/Shop">
   <meta name="keywords" content="grafik, dansk, minecraft, design, shop, discord">
-  <meta name="robots" content="index, follow"> <!-- For at sige, at søgemaskiner må indeksere og følge links på din side -->
+  <meta name="robots" content="index, follow">
 
 
   <meta property="og:title" content="MuffinGFX">
   <meta property="og:description" content="Muffingfx er et dansk grafik hold som fokusere på at levere det bedste kvalietet">
   <meta property="og:image" content="https://media.discordapp.net/attachments/1331518483028119552/1363464913263263986/New_Project_66.png?ex=68062127&is=6804cfa7&hm=9a90c3a6798f61f08b89eba8879a277277e10537791a2860d081641b6204d1e5&=&format=webp&quality=lossless&width=1872&height=654">
   <meta property="og:url" content="https://muffingfx.me/">
-  <meta property="og:type" content="website"> <!-- Dette kunne være 'article' hvis det er et blogindlæg -->
+  <meta property="og:type" content="website"> 
 
 
   <title>MuffinGFX</title>
