--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio – MuffinGFX</title>
+  <title data-translate="portfolioTitle">Portfolio – MuffinGFX</title>
   <link rel="stylesheet" href="style.css" />
   <script src="portfolio.js" defer></script>
+  <script src="script.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="img/New_Project_64.png">
 </head>
@@ -13,15 +14,21 @@
 
   <header class="navbar">
     <div class="container">
-      <div class="logo">Muffin<span>GFX</span></div>
+      <div class="logo" data-translate="logo">Muffin<span>GFX</span></div>
       <nav>
         <ul class="nav-links" id="navLinks">
-          <li><a href="index.html">Hjem</a></li>
-          <li><a href="about.html">Om Os</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="portfolio.html" class="active">Portfolio</a></li>
-          <li><a href="https://discord.gg/wV4uRQPgbg" target="_blank" class="discord-link">Discord</a></li>
+          <li><a href="index.html" data-translate="home">Hjem</a></li>
+          <li><a href="about.html" data-translate="about">Om Os</a></li>
+          <li><a href="team.html" data-translate="team">Team</a></li>
+          <li><a href="portfolio.html" class="active" data-translate="portfolio">Portfolio</a></li>
+          <li><a href="https://discord.gg/wV4uRQPgbg" target="_blank" class="discord-link" data-translate="discord">Discord</a></li>
         </ul>
+
+
+        <div class="language-toggle" id="languageToggle">
+          <img src="img/united-kingdom-flag-icon.svg" alt="Dansk" class="language-icon danish-icon">
+          <img src="img/denmark-flag-icon.svg" alt="English" class="language-icon english-icon">
+        </div>
 
         <div class="theme-toggle" id="themeToggle">
           <img src="img/moon-svgrepo-com.svg" alt="Mørk Tilstand" class="theme-icon moon-icon">
@@ -33,24 +40,21 @@
     </div>
   </header>
 
-
-
 <main class="page-content">
     <div class="container">
-        <h1 class="section-title">Portfolio</h1>
+        <h1 class="section-title" data-translate="portfolio">Portfolio</h1>
 
-        <p class="section-description">
+        <p class="section-description lang-portfoliodes" data-translate="portfoliodes">
           Her kan du udforske vores tidligere arbejde fordelt på forskellige kategorier. Vi har samlet nogle af vores bedste projekter inden for Minecraft grafik, YouTube branding og meget mere. Klik rundt og se, hvad vi kan – og bliv inspireret!
         </p>
 
         <br><br>
 
-
         <!-- Hovedkategorier -->
         <div class="main-categories">
-            <button class="main-tab active" data-main="minecraft">Minecraft</button>
-            <button class="main-tab" data-main="youtube">YouTube</button>
-            <button class="main-tab" data-main="andet">Andet</button>
+            <button class="main-tab active" data-main="minecraft" data-translate="minecraft">Minecraft</button>
+            <button class="main-tab" data-main="youtube" data-translate="youtube">YouTube</button>
+            <button class="main-tab lang-other" data-main="andet" data-translate="other">Andet</button>
         </div>
 
         <!-- Underkategorier -->
@@ -59,26 +63,65 @@
         </div>
 
         <!-- Portfolio grid -->
-        <div class="portfolio-grid" id="portfolioGrid">
+        <div class="portfolio-grid scroll-reveal" id="portfolioGrid">
         </div>
     </div>
 </main>
 
 
+<section class="partners-section scroll-reveal">
+  <div class="container">
+    <h2 class="partners-title lang-partner">Vores partnere</h2>
+    <div class="partners-carousel" id="partnersCarousel">
+      <!-- Partner: Softwave -->
+      <div class="partner-card softwave-card lang-softdec">
+        <p>Softwave<br><span>Online webstore – Vi leverer grafik og support</span></p>
+      </div>
 
+      <!-- Ledige pladser -->
+      <div class="partner-card empty">
+        <p class="lang-nextpartner">Skal du være vores næste partner?<br><span class="lang-nextpartnercontact">Kontakt os i dag!</span></p>
+      </div>
+      <div class="partner-card">
+        <p class="lang-nextpartner">Skal du være vores næste partner?<br><span class="lang-nextpartnercontact">Kontakt os i dag!</span></p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
+      <p data-translate="copyright">© 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
       <div class="social-links">
-        <a href="https://discord.gg/wV4uRQPgbg" target="_blank">Discord</a>
-        <a href="#" target="_blank">Twitter</a>
-        <a href="#" target="_blank">Instagram</a>
+        <a href="https://discord.gg/wV4uRQPgbg" target="_blank" data-translate="discordFooter">Discord</a>
+        <a href="#" target="_blank" data-translate="twitter">Twitter</a>
+        <a href="#" target="_blank" data-translate="instagram">Instagram</a>
       </div>
     </div>
   </footer>
 
 </body>
 </html>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const revealElements = document.querySelectorAll(".scroll-reveal");
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+        } else {
+          entry.target.classList.remove("visible"); // RESET-effekten
+        }
+      });
+    }, {
+      threshold: 0.15 // justér hvis animation skal ske før/først når hele elementet vises
+    });
+
+    revealElements.forEach((el) => observer.observe(el));
+  });
+</script>
