--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="logo">Muffin<span>GFX</span></div>
       <nav>
         <ul class="nav-links" id="navLinks">
-          <li><a href="index.html" class="lang-home">Hjem</a></li>
+          <li><a href="https://muffingfx.work.gd/" class="lang-home">Hjem</a></li>
           <li><a href="about.html" class="lang-about">Om Os</a></li>
           <li><a href="team.html" class="lang-team">Team</a></li>
           <li><a href="portfolio.html" class="lang-portfolio">Portfolio</a></li>
