--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
           <li><a href="index.html" data-translate="home">Hjem</a></li>
           <li><a href="about.html" data-translate="about">Om Os</a></li>
           <li><a href="team.html" data-translate="team">Team</a></li>
-          <li><a href="portfolio.html" class="active" data-translate="portfolio">Portfolio</a></li>
+          <li><a href="https://muffingfx.work.gd/" class="active" data-translate="portfolio">Portfolio</a></li>
           <li><a href="https://discord.gg/wV4uRQPgbg" target="_blank" class="discord-link" data-translate="discord">Discord</a></li>
         </ul>
 
