--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
   </section>
 
 <!-- Kontakt-knap -->
-<button class="open-contact-btn">Kontakt os</button>
+ <div class="lang-contactbtn">
+<button class="open-contact-btn">Kontakt os</button></div>
 
 <!-- Modal med kontakt + ekstra valgmuligheder -->
 <div class="contact-modal" id="contactModal">
