--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
   </section>
 
 <!-- Kontakt-knap -->
- <div class="lang-contactbtn">
-<button class="open-contact-btn">Kontakt os</button></div>
+<button class="open-contact-btn lang-contactbtn">Kontakt os</button>
 
 <!-- Modal med kontakt + ekstra valgmuligheder -->
 <div class="contact-modal" id="contactModal">
