--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </section>
 
 <!-- Kontakt-knap -->
-<button class="open-contact-btn">Kontakt os</button>
+<button class="open-contact-btn lang-contactbtn">Kontakt os</button>
 
 <!-- Modal med kontakt + ekstra valgmuligheder -->
 <div class="contact-modal" id="contactModal">
