--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Udvidet valg-menu -->
     <div class="contact-options">
       <button data-type="support">Support</button>
-      <button data-type="bestilling">Bestilling</button>
+      <button data-type="bestilling" class="contactorderlang">Bestilling</button>
       <button data-type="feedback">Feedback</button>
       <button data-type="andet">Andet</button>
     </div>
