--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <section class="partners-section">
     <div class="container scroll-reveal">
-      <h2 class="partners-title">Vores partnere</h2>
+      <h2 class="partners-title lang-ourpartner">Vores Partnere</h2>
       <div class="partners-carousel" id="partnersCarousel">
         <!-- Partner: Softwave -->
         <div class="partner-card softwave-card">
