--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
   
         <!-- Ledige pladser -->
         <div class="partner-card empty">
-          <p>Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
+          <p class="lang-partnercard">Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
         </div>
         <div class="partner-card empty">
-          <p>Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
+          <p class="lang-partnercard">Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
         </div>
       </div>
     </div>
