--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
         <!-- Ledige pladser -->
         <div class="partner-card empty">
-          <p class="lang-partnercard">Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
+          <p class="lang-partnercard">Skal du være vores næste partner?<br><span class="lang-partnercard2">Kontakt os i dag!</span></p>
         </div>
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
