--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
   
         <!-- Ledige pladser -->
         <div class="partner-card empty">
-          <p class="lang-partnercard">Skal du være vores næste partner?<br><span class="lang-partnercard2">Kontakt os i dag!</span></p>
-          <span>Kontakt os i dag!</span>
+          <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
+          <span class="lang-partnercard2">Kontakt os i dag!</span>
         </div>
         <div class="partner-card empty">
-          <p class="lang-partnercard">Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
+          <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
+          <span class="lang-partnercard2">Kontakt os i dag!</span>
         </div>
       </div>
     </div>
