--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         <!-- Ledige pladser -->
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
-          <span class="lang-partnercard2">Kontakt os i dag!</span>
+          <span class="lang-partnercardcontact">Kontakt os i dag!</span>
         </div>
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
-          <span class="lang-partnercard2">Kontakt os i dag!</span>
+          <span class="lang-partnercardcontact">Kontakt os i dag!</span>
         </div>
       </div>
     </div>
