--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="partners-carousel" id="partnersCarousel">
         <!-- Partner: Softwave -->
         <div class="partner-card softwave-card">
-          <p>Softwave<br><span>Online webstore – Vi leverer grafik og support</span></p>
+          <p>Softwave<br><span class="lang-softwavepartner">Online webstore – Vi leverer grafik og support</span></p>
         </div>
   
         <!-- Ledige pladser -->
