--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <form id="contactForm">
-      <input type="text" id="name" placeholder="Dit navn" required>
+      <input type="email" id="email" placeholder="Din e-mail" required>
       <textarea id="message" placeholder="Din besked" required></textarea>
       <input type="hidden" id="contactType" value="Support">
       <button type="submit">Send</button>
@@ -120,7 +120,6 @@
     <p id="formStatus"></p>
   </div>
 </div>
-
 
   
   <footer class="footer">
