--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
         </div>
   
         <!-- Ledige pladser -->
-        <div class="partner-card empty">
-          <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
-          <span class="lang-partnercardcontact">Kontakt os i dag!</span>
+        <div class="partner-card dutzhost-card">
+          <p>Dutzhosting<br><span class="lang-softwavepartner">Hosting Selskab – Partnerskab - Grafik</span></p>
         </div>
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
