--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
         <!-- Ledige pladser -->
         <div class="partner-card dutzhost-card">
-          <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab/Partnerskab - Grafik</span></p>
+          <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
         </div>
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
