--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
   
         <!-- Ledige pladser -->
-        <div class="partner-card dutzhost-card">
-          <a href="sigma.com"><p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p></a>
+        <a href="https://skibidi.com"><div class="partner-card dutzhost-card">
+          <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
         </div>
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
           <span class="lang-partnercardcontact">Kontakt os i dag!</span>
-        </div>
+        </div></a>
       </div>
     </div>
   </section>
