--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
   
         <!-- Ledige pladser -->
-        <a href="https://skibidi.com"><div class="partner-card dutzhost-card">
+        <a href="https://skibidi.com" style="text-decoration:none"><div class="partner-card dutzhost-card">
           <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
         </div>
         <div class="partner-card empty">
