--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
   
         <!-- Ledige pladser -->
-        <a href="https://skibidi.com" style="text-decoration:none"><div class="partner-card dutzhost-card">
+        <div class="partner-card dutzhost-card">
           <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
         </div>
         <div class="partner-card empty">
           <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
           <span class="lang-partnercardcontact">Kontakt os i dag!</span>
-        </div></a>
+        </div>
       </div>
     </div>
   </section>
