--- a/portfolio.html
+++ b/portfolio.html
@@ -69,25 +69,26 @@
 </main>
 
 
-<section class="partners-section scroll-reveal">
-  <div class="container">
-    <h2 class="partners-title lang-partner">Vores partnere</h2>
-    <div class="partners-carousel" id="partnersCarousel">
-      <!-- Partner: Softwave -->
-      <div class="partner-card softwave-card lang-softdec">
-        <p>Softwave<br><span>Online webstore – Vi leverer grafik og support</span></p>
-      </div>
-
-      <!-- Ledige pladser -->
-      <div class="partner-card empty">
-        <p class="lang-nextpartner">Skal du være vores næste partner?<br><span class="lang-nextpartnercontact">Kontakt os i dag!</span></p>
-      </div>
-      <div class="partner-card">
-        <p class="lang-nextpartner">Skal du være vores næste partner?<br><span class="lang-nextpartnercontact">Kontakt os i dag!</span></p>
+<section class="partners-section">
+    <div class="container scroll-reveal">
+      <h2 class="partners-title lang-ourpartner">Vores Partnere</h2>
+      <div class="partners-carousel" id="partnersCarousel">
+        <!-- Partner: Softwave -->
+        <div class="partner-card softwave-card">
+          <p>Softwave<br><span class="lang-softwavepartner">Online webstore – Vi leverer grafik og support</span></p>
+        </div>
+  
+        <!-- Ledige pladser -->
+        <div class="partner-card dutzhost-card">
+          <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
+        </div>
+        <div class="partner-card empty">
+          <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
+          <span class="lang-partnercardcontact">Kontakt os i dag!</span>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 <!-- Kontakt-knap -->
 <button class="open-contact-btn">Kontakt os</button>
