--- a/team.html
+++ b/team.html
@@ -94,6 +94,29 @@
     </div>
   </section>
 
+
+
+  <section class="partners-section">
+    <div class="container scroll-reveal">
+      <h2 class="partners-title lang-ourpartner">Vores Partnere</h2>
+      <div class="partners-carousel" id="partnersCarousel">
+        <!-- Partner: Softwave -->
+        <div class="partner-card softwave-card">
+          <p>Softwave<br><span class="lang-softwavepartner">Online webstore – Vi leverer grafik og support</span></p>
+        </div>
+  
+        <!-- Ledige pladser -->
+        <div class="partner-card dutzhost-card">
+          <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
+        </div>
+        <div class="partner-card empty">
+          <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
+          <span class="lang-partnercardcontact">Kontakt os i dag!</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer class="footer">
     <div class="container">
       <p class="lang-footer-text">&copy; 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
