--- a/about.html
+++ b/about.html
@@ -120,21 +120,22 @@
 
 
 
-  <section class="partners-section scroll-reveal">
-    <div class="container">
-      <h2 class="partners-title">Vores partnere</h2>
+  <section class="partners-section">
+    <div class="container scroll-reveal">
+      <h2 class="partners-title lang-ourpartner">Vores Partnere</h2>
       <div class="partners-carousel" id="partnersCarousel">
         <!-- Partner: Softwave -->
         <div class="partner-card softwave-card">
-          <p>Softwave<br><span>Online webstore – Vi leverer grafik og support</span></p>
+          <p>Softwave<br><span class="lang-softwavepartner">Online webstore – Vi leverer grafik og support</span></p>
         </div>
   
         <!-- Ledige pladser -->
-        <div class="partner-card empty">
-          <p>Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
+        <div class="partner-card dutzhost-card">
+          <p>Dutzhosting<br><span class="lang-dutzpartner">Hosting Selskab - Partnerskab/Grafik</span></p>
         </div>
         <div class="partner-card empty">
-          <p>Skal du være vores næste partner?<br><span>Kontakt os i dag!</span></p>
+          <p class="lang-partnercard">Skal du være vores næste partner?<br></p>
+          <span class="lang-partnercardcontact">Kontakt os i dag!</span>
         </div>
       </div>
     </div>
