--- a/team.html
+++ b/team.html
@@ -89,6 +89,8 @@
           <p class="discord-username scroll-reveal">@foxi6568</p>
           <span class="role-badge langrolemoderator scroll-reveal">Moderator</span>
           <p class="feedback lang-feedbackfoxi scroll-reveal">"Jeg elsker fællesskabet i teamet – vi har et virkelig godt sammenhold. Jeg har hjulpet med at promovere os og holde styr på forskellige ting bag kulisserne. Jeg tager det som det kommer og prøver bare at være der, hvor der er brug for mig."</p>
+          <br>
+          <p class="langmail scroll-reveal">mail: bulowvictor@gmail.com</p>
         </a>
       </div>
     </div>
