--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <script src="portfolio.js" defer></script>
   <script src="script.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="img/New_Project_64.png">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
 
