--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
   <script src="script.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="icon" type="image/png" href="img/New_Project_64.png">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
   <header class="navbar">
