--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <body>
   <header class="navbar">
     <div class="container">
-      <div class="logo">Muffin<span>GFX</span></div>
+      <!-- <div class="logo">Muffin<span>GFX</span></div> -->
+       <div class="logo"><img src="img/muffingfxtransparent.png" alt="muffingfx"></div>
       <nav>
         <ul class="nav-links" id="navLinks">
           <li><a href="https://muffingfx.work.gd/" class="lang-home">Hjem</a></li>
