--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <header class="navbar">
     <div class="container">
       <!-- <div class="logo">Muffin<span>GFX</span></div> -->
-       <div class="logo"><img src="img/transparentlogo.png" alt="muffingfx" width="180" height="55"></div>
+       <a href="https://muffingfx.work.gd" style="text-decoration: none;">
+        <div class="logo"><img src="img/transparentlogo.png" alt="muffingfx" width="180" height="55"></div>
+      </a>
       <nav>
         <ul class="nav-links" id="navLinks">
           <li><a href="https://muffingfx.work.gd/" class="lang-home">Hjem</a></li>
