--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
 <body>
   <header class="navbar">
     <div class="container">
-      <div class="logo">Muffin<span>GFX</span></div>
+      <a href="https://muffingfx.work.gd" style="text-decoration: none;">
+        <div class="logo"><img src="img/transparentlogo.png" alt="muffingfx" width="180" height="55"></div>
+      </a>
       <nav>
         <ul class="nav-links" id="navLinks">
           <li><a href="https://muffingfx.work.gd/" class="lang-home">Hjem</a></li>
