--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,9 @@
 
   <header class="navbar">
     <div class="container">
-      <div class="logo" data-translate="logo">Muffin<span>GFX</span></div>
+      <a href="https://muffingfx.work.gd" style="text-decoration: none;">
+        <div class="logo"><img src="img/transparentlogo.png" alt="muffingfx" width="180" height="55"></div>
+      </a>
       <nav>
         <ul class="nav-links" id="navLinks">
           <li><a href="index.html" data-translate="home">Hjem</a></li>
