--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 
   <meta property="og:title" content="MuffinGFX">
-  <meta property="og:description" content="Muffingfx er et dansk grafik hold som fokusere på at levere det bedste kvalietet">
-  <meta property="og:image" content="https://media.discordapp.net/attachments/1331518483028119552/1363464913263263986/New_Project_66.png?ex=68062127&is=6804cfa7&hm=9a90c3a6798f61f08b89eba8879a277277e10537791a2860d081641b6204d1e5&=&format=webp&quality=lossless&width=1872&height=654">
+  <meta property="og:description" content="Muffingfx is a Danish graphics team that focuses on delivering the best quality">
+  <meta property="og:image" content="https://media.discordapp.net/attachments/1000572752136249435/1383520426491248740/New_Project_23.png?ex=684f174e&is=684dc5ce&hm=86b30acc6abe6d514820b80aa0e35cc86a37727414839e877b15cb2f871ecc71&=&format=webp&quality=lossless&width=1521&height=856">
   <meta property="og:url" content="https://muffingfx.me/">
   <meta property="og:type" content="website"> 
 
