--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
       <p data-translate="copyright">© 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
       <div class="social-links">
         <a href="https://discord.gg/wV4uRQPgbg" target="_blank" data-translate="discordFooter">Discord</a>
-        <a href="#" target="_blank" data-translate="twitter">Twitter</a>
+        <a href="https://x.com/MuffinGFX" target="_blank" data-translate="twitter">Twitter</a>
         <a href="#" target="_blank" data-translate="instagram">Instagram</a>
       </div>
     </div>
