--- a/team.html
+++ b/team.html
@@ -126,7 +126,7 @@
       <p class="lang-footer-text">&copy; 2025 MuffinGFX. Alle rettigheder forbeholdes.</p>
       <div class="social-links">
         <a href="https://discord.gg/wV4uRQPgbg" target="_blank" class="lang-discord">Discord</a>
-        <a href="#" target="_blank" class="lang-twitter">Twitter</a>
+        <a href="https://x.com/MuffinGFX" target="_blank" class="lang-twitter">Twitter</a>
         <a href="#" target="_blank" class="lang-instagram">Instagram</a>
       </div>
     </div>
