--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
       <div class="social-links">
         <a href="https://discord.gg/wV4uRQPgbg" target="_blank" class="lang-discord">Discord</a>
         <a href="#" target="_blank" class="lang-twitter">Twitter</a>
-        <a href="#" target="_blank" class="lang-instagram">Instagram</a>
+        <a href="https://x.com/MuffinGFX" target="_blank" class="lang-instagram">Instagram</a>
       </div>
     </div>
   </footer>
