removing of contact function

--- a/about.html
+++ b/about.html
@@ -143,25 +143,24 @@
     </div>
   </section>
 
-<!-- Kontakt-knap -->
-<button class="open-contact-btn">Kontakt os</button>
+<!-- Kontakt-knap 
+<button class="open-contact-btn lang-contactbtn">Kontakt os</button>
 
-<!-- Modal med kontakt + ekstra valgmuligheder -->
 <div class="contact-modal" id="contactModal">
   <div class="contact-modal-content">
     <span class="close-modal">&times;</span>
     <h2>Kontakt Os</h2>
 
-    <!-- Udvidet valg-menu -->
+
     <div class="contact-options">
       <button data-type="support">Support</button>
-      <button data-type="bestilling">Bestilling</button>
+      <button data-type="bestilling" class="contactorderlang">Bestilling</button>
       <button data-type="feedback">Feedback</button>
       <button data-type="andet">Andet</button>
     </div>
 
     <form id="contactForm">
-      <input type="text" id="name" placeholder="Dit navn" required>
+      <input type="email" id="email" placeholder="Din e-mail" required>
       <textarea id="message" placeholder="Din besked" required></textarea>
       <input type="hidden" id="contactType" value="Support">
       <button type="submit">Send</button>
@@ -169,6 +168,7 @@
     <p id="formStatus"></p>
   </div>
 </div>
+-->
 
   
   <footer class="footer">
