--- a/index.html
+++ b/index.html
@@ -96,16 +96,15 @@
     </div>
   </section>
 
-<!-- Kontakt-knap -->
+<!-- Kontakt-knap 
 <button class="open-contact-btn lang-contactbtn">Kontakt os</button>
 
-<!-- Modal med kontakt + ekstra valgmuligheder -->
 <div class="contact-modal" id="contactModal">
   <div class="contact-modal-content">
     <span class="close-modal">&times;</span>
     <h2>Kontakt Os</h2>
 
-    <!-- Udvidet valg-menu -->
+
     <div class="contact-options">
       <button data-type="support">Support</button>
       <button data-type="bestilling" class="contactorderlang">Bestilling</button>
@@ -122,7 +121,7 @@
     <p id="formStatus"></p>
   </div>
 </div>
-
+-->
   
   <footer class="footer">
     <div class="container">
